aws_instance.tf
resource "aws_instance" "web1"{
    ami           = "${lookup(var.ami_id, var.region)}"
    instance_type = "t2.micro"

    #VPC
    subnet_id = "${aws_subnet.prod1-subnet-public1.id}"

    # Security Group
    vpc_security_group_ids = ["${aws_security_group.ssh-allowed.id}"]

    # the Public SSH key
    key_name = "${aws_key_pair.saiful-key-pair.id}"


    # nginx installation
    provisioner "file" {
        source = "nginx.sh"
        destination = "/tmp/nginx.sh"
    }

    provisioner "remote-exec" {
        inline = [
            "chmod +x /tmp/nginx.sh",
            "sudo /tmp/nginx.sh"
        ]
    }
    connection {
        host        = self.public_ip
        user = "${var.EC2_USER}"
        private_key = "${file("${var.PRIVATE_KEY_PATH}")}"
    }
}
